[workspace]
resolver = "2"
members = [
    "crates/retroboy",
    "crates/retroboy_chip8",
    "crates/retroboy_sdl2",
    "crates/retroboy_common",
]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.1.0"
repository = "https://github.com/Latias94/retroboy"
authors = ["Latias94 <superfrankie621@gmail.com>"]
edition = "2021"
description = "A set of emulators written in Rust for learning purposes"
readme = "README.md"

[workspace.dependencies]
retroboy = { path = "crates/retroboy" }
retroboy_chip8 = { path = "crates/retroboy_chip8" }
retroboy_sdl2 = { path = "crates/retroboy_sdl2" }
retroboy_common = { path = "crates/retroboy_common" }

anyhow = "1"
bitflags = "2"
lazy_static = "1.4"
rand = "0.8"
getrandom = "0.2"
log = "0.4"
env_logger = "0.11"
sdl2 = "0.36"
typed-builder = "0.18"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3"
