[workspace]
resolver = "2"
members = [
    "crates/retroboy",
    "crates/retroboy_chip8",
    "crates/retroboy_space_invaders",
    "crates/retroboy_sdl3",
    "crates/retroboy_common",
    "crates/retroboy_gb",
]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.1.0"
repository = "https://github.com/Latias94/retroboy"
authors = ["Latias94 <superfrankie621@gmail.com>"]
edition = "2021"
description = "A set of emulators written in Rust for learning purposes"
readme = "README.md"

[workspace.dependencies]
retroboy = { path = "crates/retroboy" }
retroboy_chip8 = { path = "crates/retroboy_chip8" }
retroboy_space_invaders = { path = "crates/retroboy_space_invaders" }
retroboy_sdl3 = { path = "crates/retroboy_sdl3" }
retroboy_common = { path = "crates/retroboy_common" }
retroboy_gb = { path = "crates/retroboy_gb" }

anyhow = "1"
bitflags = "2"
lazy_static = "1.5"
rand = "0.8"
getrandom = "0.2"
log = "0.4"
env_logger = "0.11"
typed-builder = "0.23"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3"
sdl3 = "0.16.2"
rodio = "0.20.1"
