[package]
name = "retroboy"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "A set of retro emulators written in Rust"

[dependencies]
retroboy_sdl2.workspace = true
retroboy_chip8.workspace = true

anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
