[package]
name = "retroboy"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "A set of retro emulators written in Rust"

[dependencies]
retroboy_sdl2.version = "0.1.0"
retroboy_chip8.version = "0.1.0"

anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
