[package]
name = "retroboy"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "A set of retro emulators written in Rust"

[dependencies]
retroboy_sdl3.workspace = true
retroboy_chip8.workspace = true
retroboy_space_invaders.workspace = true
retroboy_gb.workspace = true

anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
