[package]
name = "retroboy_chip8"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "RetroBoy Chip-8 emulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
retroboy_common.workspace = true

anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
rand = { workspace = true, features = ["getrandom"] }
getrandom = { workspace = true, features = ["js"] }

js-sys = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "Window"
], optional = true }

[features]
wasm = ["wasm-bindgen", "web-sys", "js-sys"]
