[package]
name = "retroboy_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "RetroBoy common codes"

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
