[package]
name = "retroboy_gb"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "RetroBoy Game Boy (DMG) emulator"

[dependencies]
retroboy_common.workspace = true

anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
once_cell = "1.19"

[dev-dependencies.mooneye-gb-core]
package = "mooneye-gb-core"
path = "../../repo-ref/mooneye-gb/core"
