[package]
name = "retroboy_gb"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "RetroBoy Game Boy emulator (DMG/CGB)"

[dependencies]
retroboy_common.workspace = true

anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
once_cell = "1.19"
png = "0.17"
