[package]
name = "retroboy_sdl2"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "RetroBoy SDL2 frontend"

[dependencies]
retroboy_common.workspace = true

anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
sdl2 = { workspace = true, features = ["bundled"] }
typed-builder.workspace = true
